plugins {
    id 'maven-publish'
    id 'java-library'
}

group = 'com.hirshi001'
version = '1.1.4'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()

}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.junit.jupiter:junit-jupiter'

    api 'io.netty:netty-codec-native-quic:4.2.12.Final'
    runtimeOnly 'io.netty:netty-codec-native-quic:4.2.12.Final:osx-aarch_64'

    api 'org.bouncycastle:bcpkix-jdk18on:1.79'

    // jetbrain annotations
    api 'org.jetbrains:annotations:23.0.0'
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Werror']
}
